Checking in shaver's patch for bug 78100, adding JS_GetExternalStringGCType (sr=brendan&jband).