js/src/jsapi.c
@@ -1690,6 +1690,17 @@ JS_NewExternalString(JSContext *cx, jschar *chars, size_t length, intN type)
     return str;
 }
 
+JS_PUBLIC_API(intN)
+JS_GetExternalStringGCType(JSRuntime *rt, JSString *str)
+{
+    uint8 type = *js_GetGCThingFlags(str) & GCF_TYPEMASK;
+
+    JS_ASSERT(type == GCX_STRING || type >= GCX_EXTERNAL_STRING);
+    if (type == GCX_STRING)
+        return -1;
+    return (intN)type;
+}
+
 /************************************************************************/
 
 JS_PUBLIC_API(void)
